--- a/src/main/resources/com/marketplace/marketplace/dialogs/add_product.fxml
+++ b/src/main/resources/com/marketplace/marketplace/dialogs/add_product.fxml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.marketplace.marketplace.dialogs.AddProductDialog">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.marketplace.marketplace.dialogs.AddProductDialog">
 
    <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="450.0" stroke="BLACK" strokeType="INSIDE" width="650.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="0.4597156398104265" startX="0.5213270142180095" startY="0.7630331753554502">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" green="0.11999999731779099" blue="0.8444278240203857" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
       <VBox alignment="CENTER" prefHeight="450.0" prefWidth="650.0">
          <children>
             <TextField fx:id="name_product" alignment="CENTER" prefHeight="35.0" promptText="Название товара">
