--- a/src/main/resources/com/marketplace/marketplace/dialogs/purchase.fxml
+++ b/src/main/resources/com/marketplace/marketplace/dialogs/purchase.fxml
@@ -3,17 +3,37 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.marketplace.marketplace.dialogs.PurchaseDialog">
    <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="350.0" stroke="BLACK" strokeType="INSIDE" width="500.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0" startX="0.4549763033175355" startY="0.7582938388625592">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.8799999952316284" green="0.07919999957084656" blue="0.696219265460968" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
       <VBox alignment="CENTER" prefHeight="350.0" prefWidth="500.0">
          <children>
             <HBox alignment="CENTER">
                <children>
                   <Label text="Количество товаров: ">
                      <font>
-                        <Font size="15.0" />
+                        <Font name="Arial Black" size="25.0" />
                      </font>
                   </Label>
                   <Label fx:id="index_products">
@@ -28,12 +48,12 @@
             </HBox>
             <HBox alignment="CENTER">
                <children>
-                  <Button fx:id="selectedBankCard" mnemonicParsing="false" onAction="#SelectedBankCard" prefWidth="115.0" text="Выбрать карту">
+                  <Button fx:id="selectedBankCard" mnemonicParsing="false" onAction="#SelectedBankCard" prefHeight="38.0" prefWidth="122.0" text="Выбрать карту">
                      <HBox.margin>
                         <Insets right="5.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#AddBankCard" prefWidth="115.0" text="Добавить карту">
+                  <Button mnemonicParsing="false" onAction="#AddBankCard" prefHeight="36.0" prefWidth="122.0" text="Добавить карту">
                      <HBox.margin>
                         <Insets left="5.0" />
                      </HBox.margin>
