--- a/src/main/resources/com/marketplace/marketplace/aplications/login_provider_window.fxml
+++ b/src/main/resources/com/marketplace/marketplace/aplications/login_provider_window.fxml
@@ -1,13 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.marketplace.marketplace.aplications.LoginProviderAplication">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.marketplace.marketplace.aplications.LoginProviderAplication">
     <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="500.0" stroke="BLACK" strokeType="INSIDE" width="750.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0" startY="0.4597156398104265">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.7236841917037964" green="0.05025584623217583" blue="0.6675651669502258" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
         <HBox alignment="CENTER_RIGHT" prefWidth="750.0">
             <children>
                 <Button fx:id="register" mnemonicParsing="false" onAction="#RegProvider" prefHeight="30.0" prefWidth="150.0" text="Регистрация">
@@ -22,6 +42,10 @@
         </HBox>
         <VBox alignment="CENTER" layoutY="37.0" prefHeight="463.0" prefWidth="750.0">
             <children>
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="D:\marketplace\Provider.png" />
+               </image></ImageView>
                 <TextField fx:id="username" alignment="CENTER" prefHeight="35.0" promptText="Логин">
                     <font>
                         <Font size="15.0" />
@@ -35,7 +59,7 @@
                         <Font size="15.0" />
                     </font>
                 </PasswordField>
-                <Label fx:id="message_error" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="350.0" textAlignment="CENTER">
+                <Label fx:id="message_error" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="357.0" textAlignment="CENTER">
                     <font>
                         <Font size="15.0" />
                     </font>
